; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/device/extr_iokit_rpc.c_iokit_destroy_object_port.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/device/extr_iokit_rpc.c_iokit_destroy_object_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IKO_NULL = common dso_local global i32 0, align 4
@IKOT_NONE = common dso_local global i32 0, align 4
@gIOKitPortCount = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iokit_destroy_object_port(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @iokit_lock_port(i32 %3)
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @IKO_NULL, align 4
  %7 = load i32, i32* @IKOT_NONE, align 4
  %8 = call i32 @ipc_kobject_set(i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @iokit_unlock_port(i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @ipc_port_dealloc_kernel(i32 %11)
  %13 = load i32, i32* @gIOKitPortCount, align 4
  %14 = add nsw i32 %13, -1
  store i32 %14, i32* @gIOKitPortCount, align 4
  %15 = load i32, i32* @KERN_SUCCESS, align 4
  ret i32 %15
}

declare dso_local i32 @iokit_lock_port(i32) #1

declare dso_local i32 @ipc_kobject_set(i32, i32, i32) #1

declare dso_local i32 @iokit_unlock_port(i32) #1

declare dso_local i32 @ipc_port_dealloc_kernel(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
